[package]
name = "base_rt"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core.workspace = true
deno_unsync.workspace = true

event_worker = { version = "0.1.0", path = "../event_worker" }

tokio.workspace = true
once_cell.workspace = true
futures-util.workspace = true
scopeguard.workspace = true
tokio-util = { workspace = true, features = ["rt"] }

nohash-hasher = "0.2"
