[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "A server based on Deno runtime, capable of running JavaScript, TypeScript, and WASM services"

[[bin]]
name = "edge-runtime"
path = "src/main.rs"

[dependencies]
deno_core.workspace = true

runtime = { version = "0.1.0", path = "../runtime" }
deno_manifest = { path = "../deno_manifest" }

graph = { version = "0.1.0", path = "../graph" }

anyhow.workspace = true
log.workspace = true
tokio.workspace = true
glob.workspace = true
once_cell.workspace = true
tracing-subscriber = { workspace = true, optional = true, features = ["env-filter", "tracing-log"] }
clap = { workspace = true, features = ["cargo", "string", "env", "derive"] }

env_logger = "0.10.0"

[features]
tracing = ["dep:tracing-subscriber"]