[package]
name = "runtime_base"
version = "0.1.0"
edition = "2021"

[dependencies]
deno_core.workspace = true
deno_unsync.workspace = true

tokio.workspace = true
once_cell.workspace = true
futures-util.workspace = true
scopeguard.workspace = true
nohash-hasher.workspace = true
uuid.workspace = true
serde.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
clap = { workspace = true, features = ["derive"] }
